@@ -1,0 +1,32 @@
+package SPVM::Net::SSLeay::OCSP_SINGLERESP;
+
+
+
+1;
+
+=head1 Name
+
+SPVM::Net::SSLeay::OCSP_SINGLERESP - OCSP_SINGLERESP Data Structure in OpenSSL
+
+=head1 Description
+
+Net::SSLeay::OCSP_SINGLERESP class in L<SPVM> represents OCSP_SINGLERESP data structure in OpenSSL.
+
+=head1 Usage
+
+  use Net::SSLeay::OCSP_SINGLERESP;
+
+=head1 See Also
+
+=over 2
+
+=item * L<Net::SSLeay|SPVM::Net::SSLeay>
+
+=back
+
+=head1 Copyright & License
+
+Copyright (c) 2024 Yuki Kimoto
+
+MIT License
+
